--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "class-validator": "^0.14.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "typeorm": "0.2.45"
+    "sqlite3": "^5.1.7",
+    "typeorm": "0.2.45",
+    "typeorm-transactional-cls-hooked": "0.1.21"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
